plugins {
    id 'java'
}

group = 'com.designpatterns'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
    }
    test {
        java {
            srcDirs = ['src/test/java']
        }
        resources {
            srcDirs = ['src/test/resources']
        }
    }
    cucumber {
        java {
            srcDirs = ['src/cucumber/java']
        }
        resources {
            srcDirs = ['src/cucumber/resources']
        }
        compileClasspath += main.output
        runtimeClasspath += main.output
    }
}

configurations {
    cucumberImplementation.extendsFrom implementation
    cucumberRuntimeOnly.extendsFrom runtimeOnly
}

dependencies {
    // Main dependencies
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'ch.qos.logback:logback-classic:1.5.13'
    
    // JUnit 5 dependencies
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
    
    // AssertJ for fluent assertions
    testImplementation 'org.assertj:assertj-core:3.24.2'
    
    // Cucumber dependencies
    cucumberImplementation 'io.cucumber:cucumber-java:7.14.1'
    cucumberImplementation 'io.cucumber:cucumber-junit-platform-engine:7.14.1'
    cucumberImplementation 'org.junit.platform:junit-platform-suite:1.10.1'
    cucumberImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
    cucumberRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
    
    // AssertJ for Cucumber tests
    cucumberImplementation 'org.assertj:assertj-core:3.24.2'
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

// Task to run Cucumber tests
task cucumber(type: Test) {
    description = 'Run Cucumber BDD tests'
    group = 'verification'
    
    testClassesDirs = sourceSets.cucumber.output.classesDirs
    classpath = sourceSets.cucumber.runtimeClasspath
    
    useJUnitPlatform()
    
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
    
    systemProperty 'cucumber.plugin', 'pretty, html:build/reports/cucumber/cucumber.html, json:build/reports/cucumber/cucumber.json'
    systemProperty 'cucumber.glue', 'com.designpatterns.cucumber'
    systemProperty 'cucumber.features', 'src/cucumber/resources'
}

// Task to run only JUnit tests
task unitTest(type: Test) {
    description = 'Run JUnit unit tests'
    group = 'verification'
    
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    
    useJUnitPlatform()
    
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

tasks.named('check') {
    dependsOn cucumber, unitTest
}
